added some sources

--- a/umap_advanced_data_mining/main.tex
+++ b/umap_advanced_data_mining/main.tex
@@ -564,12 +564,13 @@ Adjoint pairs of functions estabilish a weak equivalence relation of categories.
 \end{frame}
 
 
-
 \begin{frame}{Further reading}
 
 	\begin{itemize}
-		\item \href{https://towardsdatascience.com/how-exactly-umap-works-13e3040e1668}{How Exactly UMAP Works}
-		\item \href{https://pair-code.github.io/understanding-umap/}{Understanding UMAP}
+		\item \href{https://pair-code.github.io/understanding-umap/}{Understanding UMAP} - interactive visualizations
+		\item \href{https://umap-learn.readthedocs.io/en/latest/exploratory_analysis.html}{Exploratory Analysis of Interesting Datasets} -  UMAP's documentation
+		\item \href{https://scholar.google.com/citations?user=Jb6Z_w8AAAAJ&hl=en}{UMAP author's google scholar page}
+		\item \href{https://towardsdatascience.com/how-exactly-umap-works-13e3040e1668}{How Exactly UMAP Works} - author's other articles mention applications in life sciences
 		\item \href{https://johncarlosbaez.wordpress.com/2020/02/10/the-category-theory-behind-umap/}{The Category Theory Behind UMAP}
 		\item \href{https://www.slideshare.net/UmbertoLupo/umap-mathematics-and-implementational-details}{
 UMAP - Mathematics and implementational details
