--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -108,6 +108,8 @@
 {Worked on backend of Scala application of social media app (written using Play framework)}
 	       
 \section{Courses, certificates}
+\cvline{May 2020}{\href{https://www.coursera.org/account/accomplishments/verify/BXVKHHJJ7G54}{Advanced Portfolio Construction and Analysis with Python}}
+\cvline{Feb 2020}{\href{https://coursera.org/share/624aa48a09946dc59c5f457155605ad4}{Introduction to Portfolio Construction and Analysis with Python}}
 \cvline{Feb 2020}{\href{https://www.coursera.org/account/accomplishments/certificate/YR6KFXVLZE87}{End-to-End Machine Learning with TensorFlow on GCP}}
 \cvline{Apr 2019}{\href{https://courses.edx.org/certificates/11126c558a9e4a7697593e15fb591383}{Quantum Machine Learning}}
 \cvline{Mar 2019}{\href{https://courses.edx.org/certificates/7c5d40fb30b8456ebe6d774cec098bf5}{Sparse Representations in Image Processing: From Theory to Practice}}
