fixed error in dedication

--- a/mgr/main.tex
+++ b/mgr/main.tex
@@ -76,11 +76,12 @@
 
 \pagebreak
 
-
+{
   \vspace*{\fill}
   \mbox{}\hfill
   \LARGE{\textit{in memory of my father, Marian Bartczuk}}
-
+}
+\pagebreak
 
 \tableofcontents
 
